# LinkAuth

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TODO.md  concept.md  config.yaml  docker-compose.yml  draft-gerst-linkauth-credential-transfer-00.md  entrypoint.sh  pyproject.toml
.claude/: settings.json  settings.local.json
examples/: README.md  agent_simulation.py  basic_roundtrip.py  live_roundtrip.py
src/broker/: api.py  callback.py  config.py  crypto.py  logging.py  main.py  models.py  oauth.py  templates.py
src/broker/dao/: base.py  sqlite.py
src/frontend/: crypto.js  index.html
tests/: conftest.py  test_callback_delivery.py  test_custom_redirect.py  test_integration_live.py  test_proxy.py  test_webhook_relay.py
